# mir-shitashimu

./: .gitignore  README.md  TODO  pyproject.toml
work1/: build.sh  convert_abc.py  sheet.sh  synth.ipynb  synth.py
work1/notebook/: synth.py
work1/notebook/data/: sheet_sample.abc
work2/: genre_classification.ipynb
work2/notebook/: training-1.py  training-2.py  visualizer.py
work2/training-1/: data_directory.py  init.sh  main.py  make_dataset.py  plot.py  setup.py  train.py
work2/training-1/src/: make_dataset.py  model.py
work2/training-2/: main.py  optuna_study_trial.py  setup.py
work2/training-2/plot/: heatmap.py  loss_accuracy.py
work2/training-2/setup/: GTZAN_setup.py  gtzan_setup.py  setup.py
work2/training-2/src/: early_stopping.py  make_dataset.py  model.py  optuna_study_trial.py  train.py
