[project]
name = "mir-shitashimu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "librosa==0.11",
    "matplotlib>=3.10.7",
    "music21>=9.9.1",
    "optuna-integration[wandb]>=4.5.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]
